Fix issue where tiles could become blurry
Workaround that was being used to remove visible lines between tiles
doesn't cater for the fact that deep zoom will generate tiles of
different sizes. This would cause edge tiles to become blurred and not
align with adjacent tiles.

Within the leaflet project there is an issue that exposes a solution
that resizes the tiles by referencing the existing size of the tile.

https://github.com/Leaflet/Leaflet/issues/3575#issuecomment-150544739

--- a/Etch.OrchardCore.Leaflet/wwwroot/Styles/map.css
+++ b/Etch.OrchardCore.Leaflet/wwwroot/Styles/map.css
@@ -16,7 +16,3 @@
 .leaflet--admin {
   margin-bottom: 3rem; }
 
-.leaflet-container .leaflet-tile {
-  height: 257.5px !important;
-  width: 257.5px !important; }
-
